Minor typos fixes

--- a/views/home.pug
+++ b/views/home.pug
@@ -101,7 +101,7 @@ block content
               .row
                 .col-sm-12
                   h2.category__header Errors tracking
-                  p Not all the bugs are caught with test, so it's important to know when users are seeing errors.<br>
+                  p Not all the bugs are caught with tests, so it's important to know when users are seeing errors.<br>
                     | You can either sift through the logs or use one of the tools for capturing and presenting exceptions in a more readable way.
               include includes/home/errors-table
           section.emails
