--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -2,6 +2,6 @@ footer.footer
   .container
     .row.text-center
       .col-sm-12
-        span © 2016 DeployStack.
+        span © 2016-2017 DeployStack.
         br
         span Made by #[a(href="https://github.com/switowski" target="_blank") switowski] using #[a(href="http://demos.creative-tim.com/material-kit/index.html" target="_blank") Material Kit] and #[a(href="http://www.freepik.com/free-vector/rocket-flying-out-of-the-monitor_765338.htm" target="_blank") Rocket image by freepik]
