Small grammar fixes.

--- a/views/home.pug
+++ b/views/home.pug
@@ -10,7 +10,7 @@ block content
           .hero__text.col-xs-12.col-sm-6.col-md-7
             h1.text-center DeployStack
             //- p.hero__lead
-            //-   span Tired of comparing hosting plans, calculating the file storage cost or paying for the SSL certificates?
+            //-   span Tired of comparing hosting plans, calculating the file storage cost or paying for SSL certificates?
             //-   br
             //-   span.u-mt-small DeployStack is a list of the best, hand picked tools and services that you might need when launching a website.
             p.hero__lead Tired of comparing hosting plans, calculating the file storage cost or paying for the SSL certificates?
@@ -48,7 +48,7 @@ block content
                   h2.category__header Domain Name
                   p Your website needs a URL, so people can visit it.<br>
                     | Check how much different domains cost per year (the common ones like #[em .com] but also the unusual ones like #[em .pizza]).<br>
-                    | #[a(href="/faq#domain") Learn about] what happens if you don't have a domain or what's the difference between different domain providers.
+                    | #[a(href="/faq#domain") Learn about] what happens if you don't have a domain or the difference between domain providers.
               include includes/home/domain-table
           section.ssl
             .container
@@ -100,9 +100,9 @@ block content
             .container
               .row
                 .col-sm-12
-                  h2.category__header Errors tracking
-                  p Not all the bugs are caught with tests, so it's important to know when users are seeing errors.<br>
-                    | You can either sift through the logs or use one of the tools for capturing and presenting exceptions in a more readable way.
+                  h2.category__header Error tracking
+                  p Not all bugs are caught with tests, so it's important to know when users are seeing errors.<br>
+                    | You can either sift through the logs or use tools for capturing and presenting exceptions in a more readable way.
               include includes/home/errors-table
           section.emails
             .container
@@ -119,7 +119,7 @@ block content
               .row
                 .col-sm-12
                   h2.category__header Version Control
-                  p Online code repositories allow you to share your code with other people and synchronize it between different computers.<br>
+                  p Online code repositories allow you to share your code with other people and synchronize it between computers.<br>
                     | Most of them will let you create unlimited public repositories and some of them will also give you free private repositories.<br>
                     | Check the most popular options below.
               include includes/home/vc-table
