Fixed more typos

--- a/views/home.pug
+++ b/views/home.pug
@@ -9,16 +9,12 @@ block content
             img(src="/img/rocket.svg" alt="rocket flying out of the monitor")
           .hero__text.col-xs-12.col-sm-6.col-md-7
             h1.text-center DeployStack
-            //- p.hero__lead
-            //-   span Tired of comparing hosting plans, calculating the file storage cost or paying for SSL certificates?
-            //-   br
-            //-   span.u-mt-small DeployStack is a list of the best, hand picked tools and services that you might need when launching a website.
             p.hero__lead Tired of comparing hosting plans, calculating the file storage cost or paying for the SSL certificates?
             p.hero__lead DeployStack is a list of the best, hand picked tools and services that you might need when launching a website.
             .hero__buttons.text-center
               a.btn.btn-ghost.u-bold.u-mx-small(href="#ssl") Get free SSL certificate
               a.btn.btn-ghost.u-bold.u-mx-small(href="/faq#general") How we select tools?
-            p.hero__disclaimer.text-center Full disclosure: Some of the links are #[a.hero__link(data-toggle="modal", data-target="#affiliations-disclaimer", aria-label="Affiliations disclaimer information") affiliation links]
+            p.hero__disclaimer.text-center Full disclosure: Some of the links are #[a.hero__link(data-toggle="modal", data-target="#affiliations-disclaimer", aria-label="Affiliations disclaimer information") affiliate links]
   main
     .main.main-raised
         .text-center
