Updated the meta description

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,19 +4,19 @@ html(lang="en")
     meta(charset='utf-8')
     meta(http-equiv='x-ua-compatible', content='ie=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(name='description' content='Curated list of tools for launching websites - hosting, domains, web analytics')
+    meta(name='description' content='Curated list of best tools for launching your website. Find how to get the best hosting, cheapest domain, files storage, monitoring and more.')
     //- Facebook Open Graph metadata
     meta(property='og:url' content='https://deploystack.io/')
     meta(property='og:type' content='website')
     meta(property='og:title' content='deploystack.io')
-    meta(property='og:description' content='Curated list of tools for launching websites. Check how to find the best hosting, domain and other tools for your website.')
+    meta(property='og:description' content='Curated list of best tools for launching your website. Find how to get the best hosting, cheapest domain, files storage, monitoring and more.')
     meta(property='og:image' content='https://deploystack.io/img/fb_og_img.png')
     //- Twitter Card metadata
     meta(name='twitter:card' content='summary_large_image')
     meta(name='twitter:site' content='@SebaWitowski')
     meta(name='twitter:creator' content='@SebaWitowski')
     meta(name='twitter:title' content='deploystack.io')
-    meta(name='twitter:description' content='Curated list of tools for launching websites. Check how to find the best hosting, domain and other tools for your website.')
+    meta(name='twitter:description' content='Curated list of best tools for launching your website. Find how to get the best hosting, cheapest domain, files storage, monitoring and more.')
     meta(name='twitter:image' content='https://deploystack.io/img/twitter_card_img.png')
     title= title
     //- Favicon
