--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,7 +26,7 @@ html(lang="en")
     //- CSS
     link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/material-kit.min.css')
-    link(rel='stylesheet', href='/css/main.css')
+    link(rel='stylesheet', href='/css/main.css?v=1.0.1')
   body
     include includes/header
     block content
