Added Sentry to 'Error monitoring'

--- a/views/includes/home/errors-table.pug
+++ b/views/includes/home/errors-table.pug
@@ -1,13 +1,32 @@
-mixin airbrake-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://airbrake.io/") Open Airbrake
-mixin raygun-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://raygun.com/") Open Raygun
+mixin sentry-signup
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://sentry.io/") Open Sentry
 mixin rollbar-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://rollbar.com/") Open Rollbar
+mixin airbrake-signup
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://airbrake.io/") Open Airbrake
+//- mixin raygun-signup
+//-   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://raygun.com/") Open Raygun
 
 .row.u-mt-medium.u-mb-medium
   .col-xs-12.col-sm-4
-    .card.price.price-card--450
+    .card.price.price-card--500
+      ul
+        li.price__header Sentry
+        li Free plan with:<br>
+          | 10,000 events per month<br>
+          | 1 user
+        li Paid plans starting at #[strong $12]/month:<br>
+          | 50,000 events per month<br>
+          | Unlimited users
+        li Pre-pay annually or pay on-demand
+        li 90 days data retention
+        li
+          a(rel="nofollow" target="_blank", href="https://github.com/getsentry/sentry") Open source version<br>
+          | that you can host yourself
+      .absolute-signup-button
+        +sentry-signup
+  .col-xs-12.col-sm-4
+    .card.price.price-card--500
       ul
         li.price__header Rollbar
         li Free plan with:<br>
@@ -21,7 +40,7 @@ mixin rollbar-signup
       .absolute-signup-button
         +rollbar-signup
   .col-xs-12.col-sm-4
-    .card.price.price-card--450
+    .card.price.price-card--500
       ul
         li.price__header Airbrake
         li
@@ -34,16 +53,16 @@ mixin rollbar-signup
         li 5 team members
       .absolute-signup-button
         +airbrake-signup
-  .col-xs-12.col-sm-4
-    .card.price.price-card--450
-      ul
-        li.price__header Raygun
-        li Plans starting at #[strong $75]/month<br>
-          | (#[strong $49] if paid annually)
-        li 25,000 errors/month
-        li 180 days data retention
-        li 5 application monitored
-        li Unlimited team members
-        li 30 days free trial
-      .absolute-signup-button
-        +raygun-signup
+  //- .col-xs-12.col-sm-4
+  //-   .card.price.price-card--450
+  //-     ul
+  //-       li.price__header Raygun
+  //-       li Plans starting at #[strong $75]/month<br>
+  //-         | (#[strong $49] if paid annually)
+  //-       li 25,000 errors/month
+  //-       li 180 days data retention
+  //-       li 5 application monitored
+  //-       li Unlimited team members
+  //-       li 30 days free trial
+  //-     .absolute-signup-button
+  //-       +raygun-signup
