--- a/views/includes/home/emails-table.pug
+++ b/views/includes/home/emails-table.pug
@@ -2,6 +2,8 @@ mixin mailchimp-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="http://eepurl.com/crOTP5") Open MailChimp
 mixin sendinblue-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.sendinblue.com/?ae=445") Open SendinBlue
+mixin sparkpost-signup
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.sparkpost.com/") Open SparkPost
 mixin amazon-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://aws.amazon.com/ses/") Open Amazon SES
 mixin mailgun-signup
@@ -47,12 +49,21 @@ mixin mailgun-signup
               li 9,000 emails per month<br>
                 | (300 emails per day limit)
               li Unlimited subscribers
-              li Transactional emails (free)
+              li Also transactional emails (free)
               li Transactional SMS (paid)
             .absolute-signup-button
               +sendinblue-signup
     #email-transactional.tab-pane(role="tabpanel")
       .row
+        .col-xs-12.col-sm-4
+          .card.price
+            ul
+              li.price__header.no-border SparkPost
+              li 100,000 #[strong free] emails per month
+              li 10,000 emails per day limit
+              li Attachments up to 25MB (free)
+              li.no-border
+                +sparkpost-signup
         .col-xs-12.col-sm-4
           .card.price
             ul
@@ -62,15 +73,6 @@ mixin mailgun-signup
               li Fees for receiving emails
               li.no-border
                 +amazon-signup
-        .col-xs-12.col-sm-4
-          .card.price
-            ul
-              li.price__header.no-border SendinBlue
-              li 9,000 #[strong free] emails per month
-              li 300 emails per day limit
-              li Transactional SMS (paid)
-              li.no-border
-                +sendinblue-signup
         .col-xs-12.col-sm-4
           .card.price
             ul
