--- a/views/includes/modals/home-modals.pug
+++ b/views/includes/modals/home-modals.pug
@@ -5,7 +5,7 @@
       .modal-header
         button.close(type="button", data-dismiss="modal", aria-hidden="true", aria-label="Close") &times;
       .modal-body.text-center
-        p Affiliate links are links that include a special code in the URL. If you register from this link, some companies will give free credits to either both of us or just to me (depending on how a given company decided to set up their affiliation program - I always ask if they have some coupon codes that will give credits to both sides). Those credits can be used on their website (so one can get a few months of hosting for free, a cheaper domain, etc.).<br>
-          | Having an affiliation program doesn't affect whether a company is recommended or not. You can read more in the #[a(href="/faq#general") Do you get paid for including specific companies?] section of the FAQ. If you don't want to register from an affiliate link, just delete everything after the "?" character in the URL of a company and the affiliation code will be removed.
+        p Affiliate links have a special code in the URL. If you register from this link, some companies will give free credits to either both of us or just to me (depending on how a company set up their affiliation program - I always ask if they have some coupon codes that will give credits to both sides). Those credits can be used on their website (for a few months of free hosting, a cheaper domain, etc.) or redeemed for money (only for domains providers).<br>
+          | An affiliation program doesn't affect whether a company is recommended or not. You can read more in the #[a(href="/faq#general") Do you get paid for including specific companies?] section of the FAQ.
       .modal-footer
         button.btn.btn-default.btn-simple(type="button", data-dismiss="modal") Close
