--- a/views/includes/home/hosting-table.pug
+++ b/views/includes/home/hosting-table.pug
@@ -1,15 +1,11 @@
-//- No affiliate
 mixin amazon-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://portal.aws.amazon.com/gp/aws/developer/registration/index.html") Open Amazon
-//- No affiliate
 mixin amazon-lightsail
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://amazonlightsail.com/") Open Amazon Lightsail
-//- No affiliate
 mixin heroku-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://signup.heroku.com/") Open Heroku
 mixin digitalocean-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.digitalocean.com/?refcode=d71aa25b4581") Open DigitalOcean
-//- TODO: Add affiliate link
 mixin linode-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.linode.com/?r=9a00d53b309b115b96561104e5bb88ed9ecf9293") Open Linode
 mixin amazon-nostorage
@@ -33,6 +29,11 @@ mixin heroku-paas
   button.btn.btn-sm.btn-info(type="button", data-toggle="modal", data-target="#heroku-paas", aria-label="What is Heroku PaaS")
     span.u-bold Platform as a service &nbsp;
       i.material-icons help
+//- Mixins for convenience
+mixin ipv6
+  li IPv6 support
+mixin no-ipv6
+  li No IPv6 support
 
 .row
   .col-xs-12
@@ -81,6 +82,7 @@ mixin heroku-paas
               li 750 hours of t2.micro with Linux<br>
                 | AND<br>
                 | 750 hours of t2.micro with Windows
+              +no-ipv6
               li
                 +amazon-free('1 year only ')
               li.u-no-border
@@ -93,6 +95,7 @@ mixin heroku-paas
               li 1 CPU
               li 5 MB for DB (~10 000 rows)
               li 1000 dyno hours per month (running one website non-stop takes ~750 dyno hours per month)
+              +no-ipv6
               li
                 +heroku-paas
               li.u-no-border
@@ -107,6 +110,7 @@ mixin heroku-paas
               li 1 CPU
               li 20 GB of SSD storage
               li 1 TB of transfer
+              +ipv6
               li
                 +linode-coupon
               li.u-no-border
@@ -119,6 +123,7 @@ mixin heroku-paas
               li 1 CPU
               li 20 GB of SSD storage
               li 1 TB of transfer
+              +ipv6
               li
                 +digitalocean-coupon
               li.u-no-border
@@ -131,6 +136,7 @@ mixin heroku-paas
               li 1 CPU
               li 20 GB of SSD storage
               li 1 TB of transfer
+              +no-ipv6
               li
                 +amazon-free
               li.u-no-border
@@ -145,6 +151,7 @@ mixin heroku-paas
               li 1 CPU
               li 30 GB of SSD storage
               li 2 TB of transfer
+              +ipv6
               li
                 +linode-coupon
               li.u-no-border
@@ -157,6 +164,7 @@ mixin heroku-paas
               li 1 CPU
               li 30 GB of SSD storage
               li 2 TB of transfer
+              +ipv6
               li
                 +digitalocean-coupon
               li.u-no-border
@@ -169,6 +177,7 @@ mixin heroku-paas
               li 1 CPU
               li 30 GB of SSD storage
               li 2 TB of transfer
+              +no-ipv6
               li
                 +amazon-free
               li.u-no-border
@@ -183,6 +192,7 @@ mixin heroku-paas
               li 2 CPU
               li 48 GB of SSD storage
               li 3 TB of transfer
+              +ipv6
               li
                 +linode-coupon
               li.u-no-border
@@ -195,6 +205,7 @@ mixin heroku-paas
               li 2 CPU
               li 40 GB of SSD storage
               li 3 TB of transfer
+              +ipv6
               li
                 +digitalocean-coupon
               li.u-no-border
@@ -207,6 +218,7 @@ mixin heroku-paas
               li 2 CPU
               li 40 GB of SSD storage
               li 3 TB of transfer
+              +no-ipv6
               li
                 +amazon-free
               li.u-no-border
@@ -221,6 +233,7 @@ mixin heroku-paas
               li 4 CPU
               li 96 GB of SSD storage
               li 4 TB of transfer
+              +ipv6
               li
                 +linode-coupon
               li.u-no-border
@@ -233,6 +246,7 @@ mixin heroku-paas
               li 2 CPU
               li 60 GB of SSD storage
               li 4 TB of transfer
+              +ipv6
               li
                 +digitalocean-coupon
               li.u-no-border
@@ -245,6 +259,7 @@ mixin heroku-paas
               li 2 CPU
               li 60 GB of SSD storage
               li 4 TB of transfer
+              +no-ipv6
               li
                 +amazon-free
               li.u-no-border
@@ -259,6 +274,7 @@ mixin heroku-paas
               li 6 CPU
               li 192 GB of SSD storage
               li 8 TB of transfer
+              +ipv6
               li
                 +linode-coupon
               li.u-no-border
@@ -271,6 +287,7 @@ mixin heroku-paas
               li 4 CPU
               li 80 GB of SSD storage
               li 5 TB of transfer
+              +ipv6
               li
                 +digitalocean-coupon
               li.u-no-border
@@ -283,6 +300,7 @@ mixin heroku-paas
               li 2 CPU
               li 80 GB of SSD storage
               li 5 TB of transfer
+              +no-ipv6
               li
                 +amazon-free
               li.u-no-border
@@ -297,6 +315,7 @@ mixin heroku-paas
               li 12 CPU
               li 768 GB of SSD storage
               li 20 TB of transfer
+              +ipv6
               li
                 +linode-coupon
               li.u-no-border
@@ -309,6 +328,7 @@ mixin heroku-paas
               li 12 CPU
               li 320 GB of SSD storage
               li 7 TB of transfer
+              +ipv6
               li
                 +digitalocean-coupon
               li.u-no-border
@@ -322,6 +342,7 @@ mixin heroku-paas
               li 8 CPU
               li
                 +amazon-nostorage
+              +no-ipv6
               li
                 +amazon-free
               li.u-no-border
