Add Continuous integration section
* Also adds information about CI/CD for GitLab.

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -306,12 +306,12 @@ p {
 // Emails category ///////////////////////////////////////////////////////////
 // Simple trick to make the email categories (campaign/transactional) break
 // on small devices (it looks better that way).
-.emails-tab-span {
+.mobile-split-lines {
   display: block;
 }
 
 @media screen and (min-width: 400px){
-  .emails-tab-span {
+  .mobile-split-lines {
     display: inline;
   }
 }
