--- a/views/home.pug
+++ b/views/home.pug
@@ -120,6 +120,14 @@ block content
                     | Most of them will let you create unlimited public repositories and some of them will also give you free private repositories.<br>
                     | Check the most popular options below.
               include includes/home/vc-table
+          section.continuous-integration
+            .container
+              .row
+                .col-sm-12
+                  h2.category__header Continuous integration
+                  p Deploying your applications can be as easy as just pushing your changes to a git repository with CI tools.<br>
+                    | Save yourself a hassle and test/deploy your websites automatically with one of those great tools.
+              include includes/home/ci-table
           section#newsletter.subscribe.background-inverse.background-inverse--blue
             .container
               .row
