--- a/views/includes/home/cdn-table.pug
+++ b/views/includes/home/cdn-table.pug
@@ -14,7 +14,7 @@ mixin cloudflare-signup
         ul.nav.nav-tabs(data-tabs="tabs" role="tablist")
           li.active(role="presentation")
             a(href="#cdn-pay-as-you-go" aria-controls="cdn-pay-as-you-go" role="tab" data-toggle="tab") Pay as you go
-          li.email-tabs(role="presentation")
+          li(role="presentation")
             a(href="#cdn-subscriptions" aria-controls="cdn-subscriptions" role="tab" data-toggle="tab") Monthly plans
 .content
   .tab-content.text-center
