--- a/views/includes/home/emails-table.pug
+++ b/views/includes/home/emails-table.pug
@@ -16,12 +16,12 @@ mixin mailgun-signup
         ul.nav.nav-tabs(data-tabs="tabs" role="tablist")
           li.active(role="presentation")
             a(href="#email-campaigns" aria-controls="email-campaigns" role="tab" data-toggle="tab")
-              span.emails-tab-span Email&nbsp;
-              span.emails-tab-span campaigns
-          li.email-tabs(role="presentation")
+              span.mobile-split-lines Email&nbsp;
+              span.mobile-split-lines campaigns
+          li(role="presentation")
             a(href="#email-transactional" aria-controls="email-transactional" role="tab" data-toggle="tab")
-              span.emails-tab-span Transactional&nbsp;
-              span.emails-tab-span emails
+              span.mobile-split-lines Transactional&nbsp;
+              span.mobile-split-lines emails
 .content
   .tab-content.text-center
     #email-campaigns.tab-pane.active(role="tabpanel")
