--- a/views/includes/home/hosting-table.pug
+++ b/views/includes/home/hosting-table.pug
@@ -10,7 +10,7 @@ mixin linode-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.linode.com/?r=9a00d53b309b115b96561104e5bb88ed9ecf9293") Open Linode
 mixin amazon-nostorage
   span No storage<br>
-    | (from $0.1/GB-month on #[a(target="_blank",href="https://aws.amazon.com/ebs/pricing/") EBS])
+    | (from $0.1/GB-month on #[a(target="_blank" href="https://aws.amazon.com/ebs/pricing/") EBS])
 //- Coupon codes modal buttons
 mixin linode-coupon
   button.btn.btn-sm.btn-info(type="button", data-toggle="modal", data-target="#linode-coupon", aria-label="Linode coupon code")
