--- a/views/includes/home/vc-table.pug
+++ b/views/includes/home/vc-table.pug
@@ -7,32 +7,34 @@ mixin bitbucket-signup
 
 .row.u-mt-medium.u-mb-medium
   .col-xs-12.col-sm-4
-    .card.price
+    .card.price.price-card--400
       ul
         li.price__header GitLab
         li Free public repositiories
         li Free private repositiories
         li Free to host on your servers
         li Enterprise edition from #[strong $35]/year
-        li.no-border
-          +gitlab-signup
+        li Comes with free continous<br>
+          | integration and deployment tools
+      .absolute-signup-button
+        +gitlab-signup
   .col-xs-12.col-sm-4
-    .card.price
+    .card.price.price-card--400
       ul
         li.price__header GitHub
         li Free public repositiories
         li Private repositories: #[strong $7]/month
         li Free private repositories for students
         li Host on your servers: #[strong $21]/user/month
-        li.no-border
-          +github-signup
+      .absolute-signup-button
+        +github-signup
   .col-xs-12.col-sm-4
-    .card.price
+    .card.price.price-card--400
       ul
         li.price__header Bitbucket
         li Free public repositiories
         li Free private repositiories (5 users)
         li Above 5 users: #[strong $1]/user/month
         li Free for academic accounts
-        li.no-border
-          +bitbucket-signup
+      .absolute-signup-button
+        +bitbucket-signup
