Updated text for CI

--- a/views/home.pug
+++ b/views/home.pug
@@ -125,7 +125,8 @@ block content
               .row
                 .col-sm-12
                   h2.category__header Continuous integration
-                  p Deploying your applications can be as easy as just pushing your changes to a git repository with CI tools.<br>
+                  p With continuous integration and deployment, you can automatically run tests and other tasks each time you push code to a git repository.<br>
+                    | And once the tests are passing, the new code can be automatically deployed to production.<br>
                     | Save yourself a hassle and test/deploy your websites automatically with one of those great tools.
               include includes/home/ci-table
           section#newsletter.subscribe.background-inverse.background-inverse--blue
