--- a/views/includes/modals/home-modals.pug
+++ b/views/includes/modals/home-modals.pug
@@ -6,6 +6,6 @@
         button.close(type="button", data-dismiss="modal", aria-hidden="true", aria-label="Close") &times;
       .modal-body.text-center
         p Affiliate links have a special code in the URL. If you register from this link, some companies will give free credits to either both of us or just to me (depending on how a company set up their affiliation program - I always ask if they have some coupon codes that will give credits to both sides). Those credits can be used on their website (for a few months of free hosting, a cheaper domain, etc.) or redeemed for money (only for domains providers).<br>
-          | An affiliation program doesn't affect whether a company is recommended or not. You can read more in the #[a(href="/faq#general") Do you get paid for including specific companies?] section of the FAQ.
+          | Affiliation program doesn't affect whether a company is recommended or not. You can read more in the #[a(href="/faq#general") Do you get paid for including specific companies?] section of the FAQ.
       .modal-footer
         button.btn.btn-default.btn-simple(type="button", data-dismiss="modal") Close
