--- a/views/home.pug
+++ b/views/home.pug
@@ -127,7 +127,7 @@ block content
                   h2.category__header Continuous integration
                   p With continuous integration and deployment, you can automatically run tests and other tasks each time you push code to a git repository.<br>
                     | And once the tests are passing, the new code can be automatically deployed to production.<br>
-                    | Save yourself a hassle and test/deploy your websites automatically with one of those great tools.
+                    | Save yourself the hassle and test/deploy your websites automatically with one of those great tools.
               include includes/home/ci-table
           section#newsletter.subscribe.background-inverse.background-inverse--blue
             .container
