Updated footer: added Creative Tim affiliate link

--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -4,4 +4,4 @@ footer.footer
       .col-sm-12
         span © 2016-2017 DeployStack.
         br
-        span Made by #[a(href="https://github.com/switowski" target="_blank") switowski] using #[a(href="http://demos.creative-tim.com/material-kit/index.html" target="_blank") Material Kit] and #[a(href="http://www.freepik.com/free-vector/rocket-flying-out-of-the-monitor_765338.htm" target="_blank") Rocket image by freepik]
+        span Made by #[a(href="https://github.com/switowski" target="_blank") switowski] using #[a(href="https://www.creative-tim.com/product/material-kit/?affiliate_id=93857" target="_blank") Material Kit] and #[a(href="http://www.freepik.com/free-vector/rocket-flying-out-of-the-monitor_765338.htm" target="_blank") Rocket image by freepik]
