CDN77: Updated information on the minimum recharge

--- a/views/includes/home/cdn-table.pug
+++ b/views/includes/home/cdn-table.pug
@@ -28,7 +28,8 @@ mixin cloudflare-signup
               li Free storage (up to 50GB)
               li Points of presence: 32
               li Transfer discounts start from 30TB
-              li Minimum recharge: #[strong $99] per year
+              li Minimum recharge: #[strong $149]<br>
+                | (valid for 1 year)
             .absolute-signup-button
               +cdn77-signup
         .col-xs-12.col-sm-4
