Add utm to Sentry URL

--- a/views/includes/home/errors-table.pug
+++ b/views/includes/home/errors-table.pug
@@ -1,5 +1,5 @@
 mixin sentry-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://sentry.io/") Open Sentry
+  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://sentry.io?utm_source=deploystack") Open Sentry
 mixin rollbar-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://rollbar.com/") Open Rollbar
 mixin airbrake-signup
