--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,4 +36,5 @@ html(lang="en")
     script(src='/js/main.min.js')
     //- Analytics tools
     script(async, src='https://www.google-analytics.com/analytics.js')
+    script(async, src='//dmc1acwvwny3.cloudfront.net/atatus.js')
     script(async src='/js/stats.js')
