--- a/views/includes/home/hosting-table.pug
+++ b/views/includes/home/hosting-table.pug
@@ -29,11 +29,6 @@ mixin heroku-paas
   button.btn.btn-sm.btn-info(type="button", data-toggle="modal", data-target="#heroku-paas", aria-label="What is Heroku PaaS")
     span.u-bold Platform as a service &nbsp;
       i.material-icons help
-//- Mixins for convenience
-mixin ipv6
-  li IPv6 support
-mixin no-ipv6
-  li No IPv6 support
 
 .row
   .col-xs-12
@@ -73,7 +68,7 @@ mixin no-ipv6
     #free.tab-pane.active(role="tabpanel")
       .row
         .col-xs-12.col-sm-4.col-sm-offset-2
-          .card.price.price-hosting.price-hosting--big
+          .card.price.price-hosting.price-card--500
             ul
               li.price__header Amazon Free Tier
               li 1 GB RAM
@@ -82,24 +77,23 @@ mixin no-ipv6
               li 750 hours of t2.micro with Linux<br>
                 | AND<br>
                 | 750 hours of t2.micro with Windows
-              +no-ipv6
+              li Linux and Windows hosting
               li
                 +amazon-free('1 year only ')
-              li.u-no-border
-                +amazon-signup
+            .absolute-signup-button
+              +amazon-signup
         .col-xs-12.col-sm-4
-          .card.price.price-hosting.price-hosting--big
+          .card.price.price-hosting.price-card--500
             ul
               li.price__header Heroku
               li 512 MB (1 dyno)
               li 1 CPU
               li 5 MB for DB (~10 000 rows)
               li 1000 dyno hours per month (running one website non-stop takes ~750 dyno hours per month)
-              +no-ipv6
               li
                 +heroku-paas
-              li.u-no-border
-                +heroku-signup
+            .absolute-signup-button
+              +heroku-signup
     #5usd.tab-pane(role="tabpanel")
       .row
         .col-xs-12.col-sm-4
@@ -110,7 +104,7 @@ mixin no-ipv6
               li 1 CPU
               li 20 GB of SSD storage
               li 1 TB of transfer
-              +ipv6
+              li IPv6 support
               li
                 +linode-coupon
               li.u-no-border
@@ -123,7 +117,7 @@ mixin no-ipv6
               li 1 CPU
               li 20 GB of SSD storage
               li 1 TB of transfer
-              +ipv6
+              li IPv6 support
               li
                 +digitalocean-coupon
               li.u-no-border
@@ -136,7 +130,7 @@ mixin no-ipv6
               li 1 CPU
               li 20 GB of SSD storage
               li 1 TB of transfer
-              +no-ipv6
+              li No IPv6 support
               li
                 +amazon-free
               li.u-no-border
@@ -151,7 +145,7 @@ mixin no-ipv6
               li 1 CPU
               li 30 GB of SSD storage
               li 2 TB of transfer
-              +ipv6
+              li IPv6 support
               li
                 +linode-coupon
               li.u-no-border
@@ -164,7 +158,7 @@ mixin no-ipv6
               li 1 CPU
               li 30 GB of SSD storage
               li 2 TB of transfer
-              +ipv6
+              li IPv6 support
               li
                 +digitalocean-coupon
               li.u-no-border
@@ -177,7 +171,7 @@ mixin no-ipv6
               li 1 CPU
               li 30 GB of SSD storage
               li 2 TB of transfer
-              +no-ipv6
+              li No IPv6 support
               li
                 +amazon-free
               li.u-no-border
@@ -192,7 +186,7 @@ mixin no-ipv6
               li 2 CPU
               li 48 GB of SSD storage
               li 3 TB of transfer
-              +ipv6
+              li IPv6 support
               li
                 +linode-coupon
               li.u-no-border
@@ -205,7 +199,7 @@ mixin no-ipv6
               li 2 CPU
               li 40 GB of SSD storage
               li 3 TB of transfer
-              +ipv6
+              li IPv6 support
               li
                 +digitalocean-coupon
               li.u-no-border
@@ -218,7 +212,7 @@ mixin no-ipv6
               li 2 CPU
               li 40 GB of SSD storage
               li 3 TB of transfer
-              +no-ipv6
+              li No IPv6 support
               li
                 +amazon-free
               li.u-no-border
@@ -233,7 +227,7 @@ mixin no-ipv6
               li 4 CPU
               li 96 GB of SSD storage
               li 4 TB of transfer
-              +ipv6
+              li IPv6 support
               li
                 +linode-coupon
               li.u-no-border
@@ -246,7 +240,7 @@ mixin no-ipv6
               li 2 CPU
               li 60 GB of SSD storage
               li 4 TB of transfer
-              +ipv6
+              li IPv6 support
               li
                 +digitalocean-coupon
               li.u-no-border
@@ -259,7 +253,7 @@ mixin no-ipv6
               li 2 CPU
               li 60 GB of SSD storage
               li 4 TB of transfer
-              +no-ipv6
+              li No IPv6 support
               li
                 +amazon-free
               li.u-no-border
@@ -274,7 +268,7 @@ mixin no-ipv6
               li 6 CPU
               li 192 GB of SSD storage
               li 8 TB of transfer
-              +ipv6
+              li IPv6 support
               li
                 +linode-coupon
               li.u-no-border
@@ -287,7 +281,7 @@ mixin no-ipv6
               li 4 CPU
               li 80 GB of SSD storage
               li 5 TB of transfer
-              +ipv6
+              li IPv6 support
               li
                 +digitalocean-coupon
               li.u-no-border
@@ -300,7 +294,7 @@ mixin no-ipv6
               li 2 CPU
               li 80 GB of SSD storage
               li 5 TB of transfer
-              +no-ipv6
+              li No IPv6 support
               li
                 +amazon-free
               li.u-no-border
@@ -315,7 +309,7 @@ mixin no-ipv6
               li 12 CPU
               li 768 GB of SSD storage
               li 20 TB of transfer
-              +ipv6
+              li IPv6 support
               li
                 +linode-coupon
               li.u-no-border
@@ -328,7 +322,7 @@ mixin no-ipv6
               li 12 CPU
               li 320 GB of SSD storage
               li 7 TB of transfer
-              +ipv6
+              li IPv6 support
               li
                 +digitalocean-coupon
               li.u-no-border
@@ -342,7 +336,6 @@ mixin no-ipv6
               li 8 CPU
               li
                 +amazon-nostorage
-              +no-ipv6
               li
                 +amazon-free
               li.u-no-border
