--- a/views/home.pug
+++ b/views/home.pug
@@ -129,6 +129,16 @@ block content
                     | And once the tests are passing, the new code can be automatically deployed to production.<br>
                     | Save yourself the hassle and test/deploy your websites automatically with one of those great tools.
               include includes/home/ci-table
+          section.static-websites.background-inverse
+            .container
+              .row
+                .col-sm-12
+                  h2.category__header Static websites
+                  p When you don't need a backend for your website, you can publish it as a static page.<br>
+                    | It doesn't require a lot of computing resources and many companies will help you for free.<br>
+                    | You can deploy websites straight from the command line or from a git repository.<br>
+                    | If you anticipate adding more features (maybe a database?), select the advanced option.
+              include includes/home/static-table
           section#newsletter.subscribe.background-inverse.background-inverse--blue
             .container
               .row
