--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,19 +5,19 @@ html(lang="en")
     meta(charset='utf-8')
     meta(http-equiv='x-ua-compatible', content='ie=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(name='description' content='Curated list of best tools for launching your website. Find how to get the best hosting, cheapest domain, files storage, monitoring and more.')
+    meta(name='description' content='Curated list of best tools for launching your website. Find how to get the best hosting, cheapest domain, free CDN, errors tracking, emails and more.')
     //- Facebook Open Graph metadata
     meta(property='og:url' content='https://deploystack.io/')
     meta(property='og:type' content='website')
     meta(property='og:title' content='deploystack.io')
-    meta(property='og:description' content='Curated list of best tools for launching your website. Find how to get the best hosting, cheapest domain, files storage, monitoring and more.')
+    meta(property='og:description' content='Curated list of best tools for launching your website. Find how to get the best hosting, cheapest domain, free CDN, errors tracking, emails and more.')
     meta(property='og:image' content=cdn + "/img/fb_og_img.png")
     //- Twitter Card metadata
     meta(name='twitter:card' content='summary_large_image')
     meta(name='twitter:site' content='@SebaWitowski')
     meta(name='twitter:creator' content='@SebaWitowski')
     meta(name='twitter:title' content='deploystack.io')
-    meta(name='twitter:description' content='Curated list of best tools for launching your website. Find how to get the best hosting, cheapest domain, files storage, monitoring and more.')
+    meta(name='twitter:description' content='Curated list of best tools for launching your website. Find how to get the best hosting, cheapest domain, free CDN, errors tracking, emails and more.')
     meta(name='twitter:image' content=cdn + "/img/twitter_card_img.png")
     title= title
     //- Favicon
@@ -36,6 +36,8 @@ html(lang="en")
     //- JS
     script(src=cdn + "/js/main.min.js")
     //- Analytics tools
-    script(async, src='https://www.google-analytics.com/analytics.js')
-    script(async, src='//dmc1acwvwny3.cloudfront.net/atatus.js')
-    script(async src=cdn + "/js/stats.js")
+    script.
+      !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="4.0.0";
+      analytics.load("P4rvy61r68j0m1yclxWEMX1k0Hq5q8mV");
+      analytics.page();
+      }}();
