CDN77 discount information added

--- a/views/home.pug
+++ b/views/home.pug
@@ -156,3 +156,4 @@ block content
     include includes/modals/home-modals
     include includes/modals/hosting-modals
     include includes/modals/emails-modals
+    include includes/modals/cdn-modals
