--- a/views/includes/modals/home-modals.pug
+++ b/views/includes/modals/home-modals.pug
@@ -1,5 +1,5 @@
 //- Affiliation links modal
-#affiliations-disclaimer.modal.fade(tabindex="-1", role="dialog", aria-labelledby="affiliations-disclaimer-label" aria-hidden="true")
+#affiliations-disclaimer.modal.fade(tabindex="-1", role="dialog" aria-hidden="true")
   .modal-dialog(role="document")
     .modal-content
       .modal-header
