--- a/views/includes/modals/hosting-modals.pug
+++ b/views/includes/modals/hosting-modals.pug
@@ -11,12 +11,12 @@
         button.btn.btn-default.btn-simple(type="button", data-dismiss="modal") Close
 
 //- Amazon Free tier modal
-#amazon-free.modal.fade(tabindex="-1", role="dialog", aria-labelledby="HerokuPaasLabel" aria-hidden="true")
+#amazon-free.modal.fade(tabindex="-1", role="dialog", aria-labelledby="amazon-free-label" aria-hidden="true")
   .modal-dialog(role="document")
     .modal-content
       .modal-header
         button.close(type="button", data-dismiss="modal", aria-hidden="true", aria-label="Close") &times;
-        h4#HerokuPaasLabel.modal-title.text-center AWS Free Tier
+        h4#amazon-free-label.modal-title.text-center AWS Free Tier
       .modal-body
         p When you register at AWS (Amazon Web Services) account, you can use the Free Tier for the first 12 months. With this Free Tier, you can run 2 t2.micro instances (one with Linux, the other with Windows), use 5 GBs of S3 storage, run a small Relational Database and use a bunch of other AWS services. It's a great way to start with a very small project and when your website needs to grow, you can easily scale it into one of the paid plans. Check out #[a(target="_blank", href="https://aws.amazon.com/free/") all the Free Tier benefits].
       .modal-footer
@@ -24,7 +24,7 @@
 
 //- Coupon codes modals
 //- Linode
-#linode-coupon.modal.fade(tabindex="-1", role="dialog", aria-labelledby="linode-coupon-label" aria-hidden="true")
+#linode-coupon.modal.fade(tabindex="-1", role="dialog", aria-hidden="true")
   .modal-dialog.modal-sm(role="document")
     .modal-content
       .modal-header
@@ -40,7 +40,7 @@
         button.btn.btn-default.btn-simple(type="button", data-dismiss="modal") Close
 
 //- DigitalOcean
-#digitalocean-coupon.modal.fade(tabindex="-1", role="dialog", aria-labelledby="digitalocean-coupon-label" aria-hidden="true")
+#digitalocean-coupon.modal.fade(tabindex="-1", role="dialog", aria-hidden="true")
   .modal-dialog(role="document")
     .modal-content
       .modal-header
